java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/importDefaultPackage/x/InvalidUse.java
package x;

class InvalidUse {
  <error descr="Cannot resolve symbol 'Test'">Test</error> t = null;
}
